--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,30 @@
-# If you prefer the allow list template instead of the deny list, see community template:
-# https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
-#
-# Binaries for programs and plugins
+# Go binaries
 *.exe
 *.exe~
 *.dll
 *.so
 *.dylib
+nsm
 
-# Test binary, built with `go test -c`
+# Test binaries
 *.test
 
-# Code coverage profiles and other test artifacts
-*.out
-coverage.*
-*.coverprofile
-profile.cov
+# Build cache
+/vendor/
+/build/
 
-# Dependency directories (remove the comment below to include it)
-# vendor/
+# Log files
+*.log
 
-# Go workspace file
-go.work
-go.work.sum
+# IDE / Editor specific
+.vscode/
+.idea/
+*.swp
+*~
 
-# env file
+# OS-specific
+.DS_Store
+Thumbs.db
+
+# Environment
 .env
-
-# Editor/IDE
-# .idea/
-# .vscode/
