chore: Update .gitignore to exclude binaries and build artifacts
- Added bin/ directory to exclude compiled binaries
- Added logs/ directory for log files
- Added .tendermint* for Tendermint data directories
- Added *.sock for Unix socket files
- Added tendermint_persistent_peers temp file
- Remove accidentally committed bin/tendermint (17MB binary)

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 *.so
 *.dylib
 nsm
+bin/
 
 # Key files
 *.pem
@@ -18,6 +19,12 @@ nsm
 
 # Log files
 *.log
+logs/
+
+# Tendermint data and temp files
+.tendermint*
+tendermint_persistent_peers
+*.sock
 
 # IDE / Editor specific
 .vscode/
