chore: ignore local test binary and add start-local.sh helper

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,9 @@ bin/
 *.log
 logs/
 
+# Local debug/test artifacts
+test_broadcast_bin
+
 # Tendermint data and temp files
 .tendermint*
 tendermint_persistent_peers
