--- a/nsm.service
+++ b/nsm.service
@@ -6,15 +6,11 @@ After=network.target
 Type=simple
 User=nsm
 Group=nsm
-WorkingDirectory=/home/nsm/.nsm
-Environment=KEY_FILE=/home/nsm/.nsm/nsm_key.pem
-Environment=HOST_DATA_FILE=/home/nsm/.nsm/test-hosts.json
+WorkingDirectory=/opt/nsm
 Environment=PORT=8080
-Environment=MDNS_SERVICE_NAME=_nsm._tcp
-Environment=TEMPLATE_DIR=/home/nsm/.nsm/web
-StandardOutput=append:/home/nsm/.nsm/nsm.log
-StandardError=append:/home/nsm/.nsm/nsm.log
-ExecStart=/home/nsm/.nsm/nsm
+StandardOutput=append:/var/log/nsm/nsm.log
+StandardError=append:/var/log/nsm/nsm.log
+ExecStart=/opt/nsm/nsm
 Restart=always
 RestartSec=10
 
